# sidefx-web-cli

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py  sidefx_web.py
sidefx_web/: __init__.py
