[metadata]
name = sidefx-web
author = Thanh Ha
author-email = zxiiro@linux.com
summary = Simple tool for using the SideFX Web API
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/zxiiro/sidefx-web-cli
project_urls =
    Bug Tracker = https://github.com/zxiiro/sidefx-web-cli/issues
    Source Code = https://github.com/zxiiro/sidefx-web-cli
license = MIT
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[wheel]
universal = 1

[files]
packages = sidefx_web

[entry_points]
console_scripts =
    sidefx-web = sidefx_web:cli
